--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
 
   </dependencies>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.javassist</groupId>
+				<artifactId>javassist</artifactId>
+				<version>3.18.1-GA</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
   <build>
     <plugins>
         <plugin>
