--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,12 @@
     </dependency>
     
     <!-- driver jdbc -->
-    <dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.26</version>
+	<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		<version>9.3-1102-jdbc41</version>
 	</dependency>
+
             
 
     <!-- dependency test -->
