--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,26 @@
   </properties>
 
   <dependencies>
+	 
+	 <!-- UI dependencies -->
+	<dependency>
+	    <groupId>com.sparkjava</groupId>
+	    <artifactId>spark-core</artifactId>
+	    <version>2.2</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>com.sparkjava</groupId>
+	    <artifactId>spark-template-handlebars</artifactId>
+	    <version>2.3</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.3.1</version>
+	</dependency>
+		
 
     <!-- JPA Persistence Dependencies -->
     <dependency>
