--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             
 
     <!-- dependency test -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.9.5</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
