--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,21 @@
 	  <version>1.0-alpha-1</version>
 	</dependency>
     
-    <!-- driver jdbc -->
+    <!-- drivers jdbc -->
+    <!-- mysql -->
     <dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>8.0.17</version>
-	</dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  		<version>8.0.17</version>
+   	</dependency>
             
+    <!-- hsqldb -->
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.0</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- dependency test -->
 
@@ -40,11 +48,6 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>2.4.0</version>
-    </dependency>
   </dependencies>
   <build>
     <plugins>
