--- a/pom.xml
+++ b/pom.xml
@@ -18,34 +18,28 @@
 
     <!-- JPA Persistence Dependencies -->
     <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-entitymanager</artifactId>
-      <version>4.2.6.Final</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.hibernate.javax.persistence</groupId>
-      <artifactId>hibernate-jpa-2.0-api</artifactId>
-      <version>1.0.1.Final</version>
-      <scope>compile</scope>
-    </dependency>    
-
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>
-      <version>4.2.6.Final</version>
-    </dependency>
-    
-    <!-- driver jdbc -->
-    <dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.26</version>
+      <groupId>org.uqbar-project</groupId>
+	  <artifactId>jpa-java8-extras</artifactId>
+	  <version>1.0-alpha-1</version>
 	</dependency>
+
+    <!-- drivers jdbc -->
+    <!-- mysql -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.17</version>
+    </dependency>
             
+    <!-- hsqldb -->
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.4.0</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- dependency test -->
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -53,11 +47,6 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>2.2.8</version>
-    </dependency>
 
   </dependencies>
 
