--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>utn.dds.persistencia</groupId>
-  <artifactId>futbol</artifactId>
+  <artifactId>juego-de-tronos</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
