--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 
     <dependency>
       <groupId>com.sparkjava</groupId>
+      <artifactId>spark-debug-tools</artifactId>
+      <version>0.5</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.sparkjava</groupId>
       <artifactId>spark-template-handlebars</artifactId>
       <version>2.7.1</version>
     </dependency>
