Evitar tener que listar todas las clases en el persistence.xml

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 
 
   <build>
+    <testResources>
+      <testResource>
+        <directory>src/test/resources</directory>
+        <filtering>true</filtering>
+      </testResource>
+    </testResources>
     <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
