--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,18 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.5.0</version>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- JPA Persistence Dependencies -->
     <dependency>
-      <groupId>org.uqbar-project</groupId>
-      <artifactId>jpa-java8-extras</artifactId>
-      <version>1.0-alpha-1</version>
+      <groupId>io.github.flbulgarelli</groupId>
+      <artifactId>jpa-extras</artifactId>
+      <version>1.0.0-rc1</version>
     </dependency>
 
     <!-- drivers jdbc -->
@@ -36,14 +42,14 @@
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
       <version>2.4.0</version>
-      <scope>test</scope>
+      <scope>provided</scope>
     </dependency>
 
     <!-- dependency test -->
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.9.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -54,10 +60,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.8.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
     </plugins>
