--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
       <version>2.3.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.11</version>
+    </dependency>
 
     <!-- JPA Persistence Dependencies -->
     <dependency>
